--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,14 +2,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<link href="/nav_bar.css" rel="stylesheet" type="text/css">
+<link href="/nav.css" rel="stylesheet" type="text/css">
 
 <header>
 	<div class="navbar">
 		<div class="logo"><a href="/">BudgetBuddy</a></div>
 
 
-		<a class="enh_search" href="/categories">
+		<a class="enh_search" href="/search">
 			<i class="fa-brands fa-searchengin"></i>
 		</a>
 
@@ -76,6 +76,9 @@
 </header>
 
 
+
+
+<!-- <script type="text/javascript" src="nav_search.js"></script> -->
 <script>
 	const toggleBtn = document.querySelector('.toggle_btn');
 	const toggleBtnIcon = document.querySelector('.toggle_btn i');
@@ -96,7 +99,7 @@
 
 		if (query.length > 0) {
 			// Updated fetch URL to match the backend route
-			fetch(`/search?query=${query}`)
+			fetch(`/navsearch?query=${query}`)
 				.then(response => response.json())
 				.then(data => {
 					let resultsContainer = document.getElementById("search-results");
@@ -142,7 +145,8 @@
 	function searchRedirect() {
 		let query = document.getElementById("search-input").value;
 		if (query.length > 0) {
-			window.location.href = `/search/products?q=${encodeURIComponent(query)}`;
+			// window.location.href = `/products/search/for/name?q=${encodeURIComponent(query)}`;
+			window.location.href = `/navsearch/products?q=${encodeURIComponent(query)}`;
 		}
 	}
 </script>
