--- a/views/style/nav.css
+++ b/views/style/nav.css
@@ -59,18 +59,18 @@ header {
 
 
 	-webkit-mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,.2) 50%,#000 75%);
-    mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,.2) 50%,#000 75%);
-    -webkit-mask-size: 800%;
-    mask-size: 800%;
-    -webkit-mask-position: 0;
-    mask-position: 0;
+	mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,.2) 50%,#000 75%);
+	-webkit-mask-size: 800%;
+	mask-size: 800%;
+	-webkit-mask-position: 0;
+	mask-position: 0;
 }
 
 .enh_search:hover {
 	transition: mask-position 1s ease,-webkit-mask-position 1s ease;
-    -webkit-mask-position: 120%;
-    mask-position: 120%;
-    opacity: 1;
+	-webkit-mask-position: 120%;
+	mask-position: 120%;
+	opacity: 1;
 	color: transparent;
 }
 
@@ -289,7 +289,7 @@ header {
 }
 
 .dropdown-menu {
-	display: none;
+	/* display: none; */
 	position: absolute;
 	right: -60;
 	top: 40px;
@@ -301,7 +301,34 @@ header {
 	width: 100px;
 }
 
+.dropdown-menu {
+	display: none;
+	position: absolute;
+	right: -60;
+	top: 40px;
+	background-color: #3333339a;
+	color: white;
+	padding: 10px;
+	border-radius: 5px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	width: 150px;
+}
 
+.dropdown-menu a {
+	display: block;
+	color: white;
+	text-decoration: none;
+	margin: 5px 0;
+	text-align: center;
+}
+
+.dropdown-menu a:hover {
+	color: #7c1919d7;
+}
+
+.dropdown:hover .dropdown-menu {
+	display: block;
+}
 
 /* Logout Button */
 .logout-btn {
