--- a/views/style/nav.css
+++ b/views/style/nav.css
@@ -7,7 +7,8 @@
 
 body {
 	height: 100vh;
-	background-image: url('https://images.unsplash.com/photo-1485470733090-0aae1788d5af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1517&q=80');
+	/* background-image: url('https://images.unsplash.com/photo-1485470733090-0aae1788d5af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1517&q=80'); */
+	background-color: rgb(18, 128, 161);
 	background-size: cover;
 	background-position: center;
 	text-align: center;
