--- a/views/style/productdetails.css
+++ b/views/style/productdetails.css
@@ -37,6 +37,13 @@
 }
 
 
+.rate {
+	font-weight: bold;
+	padding-top: 40px;
+	padding-left: 10px;
+}
+
+
 .prdlink {
 	margin-left: 10%;
 	margin-top: 5%;
