Update: Add logo picture

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,8 @@
 
 <header>
 	<div class="navbar">
-		<div class="logo"><a href="/">BudgetBuddy</a></div>
+		<!-- <div class="logo"><a href="/">BudgetBuddy</a></div> -->
+		<div class="logo"><a href="/"><img src="/pictures/logo.png" alt="BudgetBuddy" style="width:100px;height:100px;"></a></div>
 
 
 		<a class="enh_search" href="/search">
