--- a/views/style/productdetails.css
+++ b/views/style/productdetails.css
@@ -23,33 +23,44 @@
 }
 
 .retailer {
-
+	width: 500px;
+	/* max-width: fit-content; */
 	display: flex;
 	border-style: groove;
 	margin-bottom: 15px;
 	border-radius: 8px;
-	padding: 5px;
-	height: 115px;
+	/* padding: 5px; */
+	height: 120px;
+	
+	align-items: center;
 }
 
 .retailer img {
+	margin-left: 10px;
 	height: 100px;
+	max-height: 100px;
+	margin-top: 2%;
+
+	max-width: 100px;
 }
 
 
 .rate {
 	font-weight: bold;
-	padding-top: 40px;
 	padding-left: 10px;
 }
 
 
 .prdlink {
 	margin-left: 10%;
-	margin-top: 5%;
-	font-size: 24px;
+	/* margin-top: 5%; */
+	font-size: 15;
 	text-align: center;
 	font-weight: bold;
+
+	width: 150px;
+	max-width: 150px;
+	min-width: 150px;
 }
 
 
@@ -66,18 +77,8 @@
 	outline: none;
 	padding: 0.7rem;
 	transition: 0.4s ease;
-	width: 100%;
-	/* display: inline-flex; */
-	margin-top: 50%;
-	/* margin-right: 0; */
-	/* margin-left: 10%; */
-	/* float: right; */
-
-	/* margin-left: auto;  */
-	/* margin-right: 0; */
-
+	/* width: 100%; */
 	font-size: 30px;
-	/* position: relative; */
 
 	background: #e6a247;
 	border: none;
@@ -85,9 +86,10 @@
 	-webkit-box-shadow: 0 3px 13px -2px rgba(0, 0, 0, .15);
 	box-shadow: 0 3px 13px -2px rgba(0, 0, 0, .15);
 	color: #fff;
-	display: flex; 
 	font-family: 'Ubuntu', sans-serif;
 	justify-content: space-around;
+
+	margin-left: 30px;
 }
 
 .add-to-cart-button:active {
