Update: Make footer smaller and sticking to the bottom.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,27 +1,28 @@
 <link href="/footer.css" rel="stylesheet" type="text/css">
 
 
+
+<div class="content"></div>
 <footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-			<h4>About Us</h4>
-			<p>It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain.</p>
-			<ul class="social-icons">
-				<li><a href="#" class="fa-brands fa-facebook-f"></a></li>
-				<li><a href="#" class="fa-brands fa-twitter"></a></li>
-				<li><a href="#" class="fa-brands fa-instagram"></a></li>
-				<li><a href="#" class="fa-brands fa-linkedin"></a></li>
-			</ul>
+				<div class="about">About Us</div>
+				<p>It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain.</p>
+				<div class="col-md-6">
+					<a href="https://goo.gl/maps/4u27q9cVGe6NgufS6" target="_blank" class="fa fa-map-marker"></a> Λεωφ. Βασιλίσσης Αμαλίας 133, Αθήνα 105 57
+					<a href="tel:+302102102102" class="fa fa-phone"></a> +30 2102102102
+					<a href="mailto:skrnodemail@gmail.com" class="fa fa-envelope"></a> skrnodemail@gmail.com
+				</div>
+				
+				<ul class="social-icons">
+					<li><a href="#" class="fa-brands fa-facebook-f"></a></li>
+					<li><a href="#" class="fa-brands fa-twitter"></a></li>
+					<li><a href="#" class="fa-brands fa-instagram"></a></li>
+					<li><a href="#" class="fa-brands fa-linkedin"></a></li>
+				</ul>
 			</div>
-			<div class="col-md-6">
-			<h4>Contact Us</h4>
-			<ul>
-				<li><a href="https://goo.gl/maps/4u27q9cVGe6NgufS6" target="_blank" class="fa fa-map-marker"></a> Λεωφ. Βασιλίσσης Αμαλίας 133, Αθήνα 105 57</li>
-				<li><a href="tel:+302102102102" class="fa fa-phone"></a> +30 2102102102</li>
-				<li><a href="mailto:skrnodemail@gmail.com" class="fa fa-envelope"></a> skrnodemail@gmail.com</li>
-			</ul>
-			</div>
+			
 		</div>
 	</div>
 </footer>
