--- a/views/style/footer.css
+++ b/views/style/footer.css
@@ -1,16 +1,34 @@
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, sans-serif;
+}
+
+/* Content should take up remaining space */
+.content {
+    flex: 1;
+}
+
+
+
 footer {
 	background-color: #222;
 	color: #fff;
-	padding: 50px 10px;
+	padding: 20px;
 }
 
-footer h4 {
-	font-size: 20px;
-	margin-bottom: 20px;
+.about {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 10px;
 }
   
 footer p {
-	font-size: 16px;
+	font-size: 12px;
 	line-height: 1.5;
 	margin-bottom: 20px;
 }
@@ -28,8 +46,8 @@ footer li {
 	
 }
   
-footer li a {
-	margin-right: 10px;
+footer a {
+	padding-left: 15px;
 }
   
 .social-icons {
@@ -45,14 +63,10 @@ footer li a {
   
 .social-icons li:last-child {
 	margin-right: 0;
+	margin-top: 10px;
 }
 
 .fa {
-	/* padding: 20px;
-	font-size: 30px;
-	width: 50px;
-	text-align: center;
-	text-decoration: none; */
 	margin: 10px 2px;
 }
 
@@ -74,26 +88,10 @@ footer li a {
 	-webkit-border-radius:25px;
 	background-color: #333;
 	color: #fff;
+	
 }
   
 .social-icons a:hover {
 	background-color: #fff;
 	color: #7c1919d7;
 }
-
-/* .social-icons a {
-	color: #fff;
-	display: inline-block;
-	font-size: 20px;
-	line-height: 1;
-	text-align: center;
-	width: 60px;
-	height: 60px;
-	border-radius: 50%;
-	background-color: #333;
-}
-  
-.social-icons a:hover {
-	background-color: #fff;
-	color: #7c1919d7;
-}   */
