--- a/views/style/nav.css
+++ b/views/style/nav.css
@@ -5,6 +5,10 @@
 	font-family: Arial, sans-serif;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
 	height: 100vh;
 	/* background-image: url('https://images.unsplash.com/photo-1485470733090-0aae1788d5af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1517&q=80'); */
