--- a/views/style/products.css
+++ b/views/style/products.css
@@ -158,9 +158,7 @@ title {
     width: 100px;
     height: 80px;
     max-height: 80px;
-
     position: absolute; 
-    bottom: 10px;
-
+    bottom: 0;
     margin-left: 40px;
 }
