--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,36 +1,45 @@
-<link href="/signup.css" rel="stylesheet" type="text/css">
-
 <%- include('./partials/header.ejs') %>
+
+
+<link href="/signup.css" rel="stylesheet" type="text/css">
 <body>
 	<%- include('./partials/nav.ejs') %>
-  
-  <title>Sign Up</title>
-</head>
-<body>
-  <div class="signup-container">
-	<h2>Sign Up</h2>
 
-	<form action="/login/signup" method="POST">
-		<div class="form-group">
-			<label for="name">Name:</label>
-			<input type="text" id="name" name="name" required>
-		</div>
-		<div class="form-group">
-			<label for="email">Email:</label>
-			<input type="email" id="email" name="email" required>
-	  	</div>
-		<div class="form-group">
-			<label for="password">Password:</label>
-			<input type="password" id="password" name="password" required>
-		</div>
-		<div class="form-group">
-			<label for="confirmPassword">Confirm Password:</label>
-			<input type="password" id="confirmPassword" name="confirmPassword" required>
-		</div>
-	  	<button type="submit" class="signup-btn">Sign Up</button>
-	</form>
-	<p>Already have an account? <a href="/login">Sign In</a></p>
-  </div>
+  	<div class="signup-container">
+		<h2>Sign Up</h2>
+
+		<!-- Error Messages -->
+		<% if (errors && errors.length > 0) { %>
+			<div class="error-container">
+				<ul>
+					<% errors.forEach(error => { %>
+						<li><%= error %></li>
+					<% }) %>
+				</ul>
+			</div>
+		<% } %>
+
+		<form action="/login/signup" method="POST">
+			<div class="form-group">
+				<label for="name">Name:</label>
+				<input type="text" id="name" name="name" required>
+			</div>
+			<div class="form-group">
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email" required>
+			</div>
+			<div class="form-group">
+				<label for="password">Password:</label>
+				<input type="password" id="password" name="password" required>
+			</div>
+			<div class="form-group">
+				<label for="confirmPassword">Confirm Password:</label>
+				<input type="password" id="confirmPassword" name="confirmPassword" required>
+			</div>
+			<button type="submit" class="signup-btn">Sign Up</button>
+		</form>
+		<p>Already have an account? <a href="/login">Sign In</a></p>
+	</div>
 </body>
 
 <%- include('./partials/footer.ejs') %>
