--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,17 @@
 	<div class="login-container">
 	<h2>Sign In</h2>
 
+	<!-- Error Messages -->
+	<% if (errors && errors.length > 0) { %>
+		<div class="error-container">
+			<ul>
+				<% errors.forEach(error => { %>
+					<li><%= error %></li>
+				<% }) %>
+			</ul>
+		</div>
+	<% } %>
+
 
 	<form action="/login" method="POST">
 		<div class="form-group">
